[package]
name = "bloom-vulkano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "master" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", branch = "master" }
winit = "0.29"
bytemuck = "1.13.0"
